# birdsnest

./: .gitignore  Makefile  README.md  publish-all.sh  pyproject.toml
.github/: CODEOWNERS
scripts/: install-systemd.sh
src/: capture.py  livestream.py  record.py  rtsp_utils.py  stitch.py  upload.py
systemd/: birdsnest-livestream.service.template
